--- a/src/index.html
+++ b/src/index.html
@@ -23,18 +23,18 @@
 <body>
     <div id="pages">
         <div class="pages-list">
-            <div><a href="pages/main.html">Главная</a></div>
-            <div><a href="pages/about.html">О нас</a></div>
-            <div><a href="pages/contacts.html">Контакты</a></div>
-            <div><a href="pages/prices.html">Цены</a></div>
-            <div><a href="pages/projects.html">Проекты</a></div>
-            <div><a href="pages/project.html">Проект</a></div>
-            <div><a href="pages/services.html">Услуги</a></div>
-            <div><a href="pages/service-design.html">Дизайн/услуга</a></div>
-            <div><a href="pages/service-architecture.html">Архитектура/услуга</a></div>
-            <div><a href="pages/service-complectation.html">Комплектация/услуга</a></div>
-            <div><a href="pages/service-vision.html">Надзор/услуга</a></div>
-            <div><a href="pages/page404.html">404</a></div>
+            <div><a href="pages/main1.html">Главная</a></div>
+            <div><a href="pages/about1.html">О нас</a></div>
+            <div><a href="pages/contacts1.html">Контакты</a></div>
+            <div><a href="pages/prices1.html">Цены</a></div>
+            <div><a href="pages/projects1.html">Проекты</a></div>
+            <div><a href="pages/project1.html">Проект</a></div>
+            <div><a href="pages/services1.html">Услуги</a></div>
+            <div><a href="pages/service-design1.html">Дизайн/услуга</a></div>
+            <div><a href="pages/service-architecture1.html">Архитектура/услуга</a></div>
+            <div><a href="pages/service-complectation1.html">Комплектация/услуга</a></div>
+            <div><a href="pages/service-vision1.html">Надзор/услуга</a></div>
+            <div><a href="pages/page4041.html">404</a></div>
         </div>
     </div>
 </body>
