--- a/src/pages/services1.html
+++ b/src/pages/services1.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style9.css">
-    <link rel="stylesheet" href="../assets/scss/animations9.css">
-    <link rel="stylesheet" href="../assets/scss/mobile9.css">
+    <link rel="stylesheet" href="../assets/scss/style10.css">
+    <link rel="stylesheet" href="../assets/scss/animations10.css">
+    <link rel="stylesheet" href="../assets/scss/mobile10.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
@@ -460,35 +460,35 @@
                         <div class="footer__container">
                             <div class="footer__left">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view0 duration-1">
+                                    <div class="duration-1">
                                         <a href="#">Политика конфиденциальности</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="footer__middle">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view0 duration-1">
+                                    <div class="duration-1">
                                         © 2014-2025
                                     </div>
                                 </div>
                             </div>
                             <div class="footer__right">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view duration-1">
+                                    <div class="duration-1">
                                         <div class="footer__right-button">
                                             <a href="#" class="primary-button">
                                                 <div class="slide-up-in-view__container">
-                                                    <div class="primary-button__text slide-up-in-view duration-1">
+                                                    <div class="primary-button__text duration-1">
                                                         <div class="primary-button__text-animation">заявка на обратный звонок</div>
                                                     </div>
                                                 </div>
-                                                <div class="primary-button__circle-anchor">
+                                                <div class="primary-button__circle-anchor show">
                                                     <div class="primary-button__circle-animation">
                                                         <div class="primary-button__circle"></div>
                                                     </div>
                                                 </div>
                                                 <div class="slide-up-in-view__container">
-                                                    <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                                    <div class="primary-button__arrow duration-1 ">
                                                         <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                                             <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -509,7 +509,7 @@
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/pageable.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main7.js"></script>
+<script src="../assets/js/main8.js"></script>
 <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
