--- a/src/pages/service-architecture1.html
+++ b/src/pages/service-architecture1.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style9.css">
-    <link rel="stylesheet" href="../assets/scss/animations9.css">
-    <link rel="stylesheet" href="../assets/scss/mobile9.css">
+    <link rel="stylesheet" href="../assets/scss/style10.css">
+    <link rel="stylesheet" href="../assets/scss/animations10.css">
+    <link rel="stylesheet" href="../assets/scss/mobile10.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
@@ -61,7 +61,7 @@
         <div class="mobile-menu__phone"><div>+7 963 77 9999 2</div></div>
         <div class="mobile-menu__city"><div>Санкт-Петербург</div></div>
         <div class="mobile-menu__gray-line"></div>
-        <div class="mobile-menu__button-anchor black-button">
+        <div class="mobile-menu__button-anchor button-animation black-button">
             <div class="main-view__button-text-wrapper">
                 <div class="main-view__button-text">оставить<br/>заявку</div>
             </div>
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="architecture-main__container">
-                <div class="architecture-main__button-anchor">
+                <div class="architecture-main__button-anchor button-animation">
                     <div class="main-view__button-text-wrapper">
                         <div class="main-view__button-text">оставить<br/>заявку</div>
                     </div>
@@ -113,7 +113,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="animation-button-height animation-height">
+                    <div class="animation-button-height">
                         <div class="round-button"></div>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="services-desc__button-anchor black-button mid-size">
+                                    <div class="services-desc__button-anchor button-animation black-button mid-size">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text row3">
                                                 закажите<br>
@@ -278,7 +278,7 @@
                                                 </svg>
                                             </div>
                                         </div>
-                                        <div class="animation-button-height animation-height">
+                                        <div class="animation-button-height">
                                             <div class="round-button"></div>
                                         </div>
                                     </div>
@@ -297,7 +297,7 @@
                 <div class="project-support__container">
                     <div class="preoject-description__button">
                         <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
-                        <div class="price-supervision__button-anchor black-button">
+                        <div class="price-supervision__button-anchor button-animation black-button">
                             <div class="main-view__button-text-wrapper">
                                 <div class="main-view__button-text">оставить <br>заявку</div>
                             </div>
@@ -309,7 +309,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="animation-button-height animation-height">
+                            <div class="animation-button-height">
                                 <div class="round-button"></div>
                             </div>
                         </div>
@@ -566,7 +566,7 @@
                                 <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
 
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -599,7 +599,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">оставить<br>заявку</div>
                                         </div>
@@ -633,7 +633,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -666,7 +666,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -699,7 +699,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -982,7 +982,7 @@
                     </div>
                     <div class="preoject-description__button">
                         <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
-                        <div class="price-supervision__button-anchor black-button">
+                        <div class="price-supervision__button-anchor button-animation black-button">
                             <div class="main-view__button-text-wrapper">
                                 <div class="main-view__button-text">закажите <br>звонок<br> в удобное<br>для вас время</div>
                             </div>
@@ -994,7 +994,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="animation-button-height animation-height">
+                            <div class="animation-button-height">
                                 <div class="round-button"></div>
                             </div>
                         </div>
@@ -1210,35 +1210,35 @@
                     <div class="footer__container">
                         <div class="footer__left">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view0 duration-1">
+                                <div class="duration-1">
                                     <a href="#">Политика конфиденциальности</a>
                                 </div>
                             </div>
                         </div>
                         <div class="footer__middle">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view0 duration-1">
+                                <div class="duration-1">
                                     © 2014-2025
                                 </div>
                             </div>
                         </div>
                         <div class="footer__right">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1">
+                                <div class="duration-1">
                                     <div class="footer__right-button">
                                         <a href="#" class="primary-button">
                                             <div class="slide-up-in-view__container">
-                                                <div class="primary-button__text slide-up-in-view duration-1">
+                                                <div class="primary-button__text duration-1">
                                                     <div class="primary-button__text-animation">заявка на обратный звонок</div>
                                                 </div>
                                             </div>
-                                            <div class="primary-button__circle-anchor">
+                                            <div class="primary-button__circle-anchor show">
                                                 <div class="primary-button__circle-animation">
                                                     <div class="primary-button__circle"></div>
                                                 </div>
                                             </div>
                                             <div class="slide-up-in-view__container">
-                                                <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                                <div class="primary-button__arrow duration-1 ">
                                                     <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                                         <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -1259,7 +1259,7 @@
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/pageable.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main7.js"></script>
+<script src="../assets/js/main8.js"></script>
 <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
