--- a/src/pages/service-complectation1.html
+++ b/src/pages/service-complectation1.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style9.css">
-    <link rel="stylesheet" href="../assets/scss/animations9.css">
-    <link rel="stylesheet" href="../assets/scss/mobile9.css">
+    <link rel="stylesheet" href="../assets/scss/style10.css">
+    <link rel="stylesheet" href="../assets/scss/animations10.css">
+    <link rel="stylesheet" href="../assets/scss/mobile10.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
@@ -60,7 +60,7 @@
         <div class="mobile-menu__phone"><div>+7 963 77 9999 2</div></div>
         <div class="mobile-menu__city"><div>Санкт-Петербург</div></div>
         <div class="mobile-menu__gray-line"></div>
-        <div class="mobile-menu__button-anchor black-button">
+        <div class="mobile-menu__button-anchor button-animation black-button">
             <div class="main-view__button-text-wrapper">
                 <div class="main-view__button-text">оставить<br/>заявку</div>
             </div>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="complectation__gray-line"><div class="gray-line"></div></div>
-                <div class="complectation__button-anchor">
+                <div class="complectation__button-anchor button-animation">
                     <div class="main-view__button-text-wrapper">
                         <div class="main-view__button-text">оставить<br/>заявку</div>
                     </div>
@@ -142,7 +142,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="animation-button-height animation-height">
+                    <div class="animation-button-height">
                         <div class="round-button"></div>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="steps__button-anchor black-button mid-size">
+                        <div class="steps__button-anchor button-animation black-button mid-size">
                             <div class="main-view__button-text-wrapper row3 tt">
                                 <div class="main-view__button-text main-view__button-text5">
                                     закажите<br>
@@ -372,7 +372,7 @@
         </div>
         <div class="preoject-description__button">
             <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
-            <div class="price-supervision__button-anchor">
+            <div class="price-supervision__button-anchor button-animation">
                 <div class="main-view__button-text-wrapper">
                     <div class="main-view__button-text">познвкомьтесь <br>с нашими<br> проектами</div>
                 </div>
@@ -384,7 +384,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="animation-button-height animation-height">
+                <div class="animation-button-height">
                     <div class="round-button"></div>
                 </div>
             </div>
@@ -793,7 +793,7 @@
                                 <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
 
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -826,7 +826,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">оставить<br>заявку</div>
                                         </div>
@@ -860,7 +860,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -893,7 +893,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -926,7 +926,7 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="projects-swiper-slide__content">
-                                    <div class="projects-swiper-slide__button-anchor">
+                                    <div class="projects-swiper-slide__button-anchor button-animation">
                                         <div class="main-view__button-text-wrapper">
                                             <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
@@ -1209,7 +1209,7 @@
                     </div>
                     <div class="preoject-description__button">
                         <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
-                        <div class="price-supervision__button-anchor black-button">
+                        <div class="price-supervision__button-anchor button-animation black-button">
                             <div class="main-view__button-text-wrapper">
                                 <div class="main-view__button-text">закажите <br>звонок<br> в удобное<br>для вас время</div>
                             </div>
@@ -1221,7 +1221,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="animation-button-height animation-height">
+                            <div class="animation-button-height">
                                 <div class="round-button"></div>
                             </div>
                         </div>
@@ -1379,35 +1379,35 @@
                     <div class="footer__container">
                         <div class="footer__left">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view0 duration-1">
+                                <div class="duration-1">
                                     <a href="#">Политика конфиденциальности</a>
                                 </div>
                             </div>
                         </div>
                         <div class="footer__middle">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view0 duration-1">
+                                <div class="duration-1">
                                     © 2014-2025
                                 </div>
                             </div>
                         </div>
                         <div class="footer__right">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1">
+                                <div class="duration-1">
                                     <div class="footer__right-button">
                                         <a href="#" class="primary-button">
                                             <div class="slide-up-in-view__container">
-                                                <div class="primary-button__text slide-up-in-view duration-1">
+                                                <div class="primary-button__text duration-1">
                                                     <div class="primary-button__text-animation">заявка на обратный звонок</div>
                                                 </div>
                                             </div>
-                                            <div class="primary-button__circle-anchor">
+                                            <div class="primary-button__circle-anchor show">
                                                 <div class="primary-button__circle-animation">
                                                     <div class="primary-button__circle"></div>
                                                 </div>
                                             </div>
                                             <div class="slide-up-in-view__container">
-                                                <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                                <div class="primary-button__arrow duration-1 ">
                                                     <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                                         <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -1427,7 +1427,7 @@
 </div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main7.js"></script>
+<script src="../assets/js/main8.js"></script>
 <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
