--- a/src/pages/contacts1.html
+++ b/src/pages/contacts1.html
@@ -93,9 +93,9 @@
     </div>
 </div>
 <div id="container">
-    <div class="contacts giga-white-header">
+    <div class="contacts">
         <section class="contacts-page">
-            <div class="contacts-page__top s-mb-4">
+            <div class="contacts-page__top s-mb-4 giga-white-header">
                 <div class="about-section__content">
                     <div class="about-section__button-anchor button-animation">
                         <div class="main-view__button-text-wrapper">
