--- a/src/pages/main1.html
+++ b/src/pages/main1.html
@@ -61,7 +61,7 @@
              <div class="mobile-menu__phone"><div>+7 963 77 9999 2</div></div>
              <div class="mobile-menu__city"><div>Санкт-Петербург</div></div>
              <div class="mobile-menu__gray-line"></div>
-             <div class="mobile-menu__button-anchor button-animation black-button">
+             <div class="mobile-menu__button-anchor black-button">
                  <div class="main-view__button-text-wrapper">
                      <div class="main-view__button-text">оставить<br/>заявку</div>
                  </div>
