--- a/src/pages/prices1.html
+++ b/src/pages/prices1.html
@@ -291,7 +291,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="price-supervision__img">
+                        <div class="price-supervision__img big-img">
                             <div class="price-supervision__img-animation">
                                 <img class="scale-into-view white-header" src="../assets/images/price-vision.png" alt="">
                             </div>
