--- a/src/pages/service-architecture1.html
+++ b/src/pages/service-architecture1.html
@@ -232,7 +232,7 @@
                                         <div class="services-desc__bottom-price">
                                             <div class="slide-up-in-view__container">
                                                 <div class="slide-up-in-view duration-1">
-                                                    4500 ₽ / м<span>2</span>
+                                                    4500 ₽ / м<span class="upper">2</span>
                                                 </div>
                                             </div>
                                         </div>
