horizontal orientation + reveal plugin

--- a/src/pages/page4041.html
+++ b/src/pages/page4041.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/set.css">
     <link rel="stylesheet" href="../assets/scss/style10.css">
     <link rel="stylesheet" href="../assets/scss/animations10.css">
-    <link rel="stylesheet" href="../assets/scss/mobile10.css">
+    <link rel="stylesheet" href="../assets/scss/mobile11.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
@@ -132,7 +132,8 @@
 </div>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main8.js"></script>
+<script src="../assets/js/ScrollTriger.js"></script>
+<script src="../assets/js/main9.js"></script>
 <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
