--- a/src/pages/main1.html
+++ b/src/pages/main1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/set.css">
     <link rel="stylesheet" href="../assets/scss/style10.css">
     <link rel="stylesheet" href="../assets/scss/animations10.css">
-    <link rel="stylesheet" href="../assets/scss/mobile10.css">
+    <link rel="stylesheet" href="../assets/scss/mobile11.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
@@ -1545,6 +1545,7 @@
      <script src="../assets/js/jquery.min.js"></script>
      <script src="../assets/js/swiper.js"></script>
      <script src="../assets/js/scrollreveal.js"></script>
-     <script src="../assets/js/main8.js"></script>
+     <script src="../assets/js/ScrollTriger.js"></script>
+     <script src="../assets/js/main9.js"></script>
 </body>
 </html>
